--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,6 @@ ol {
     .pet ul {
         padding:10px;
         list-style-type: square;
-
     }
     .pet ul li{
         list-style-type: square;
@@ -253,7 +252,16 @@ ol {
     grid-template-columns: 1fr 1fr;
  }
  #travel div p {
-    grid-column: 2;
+    grid-column:  2;
  }
+
+ .animated {
+    animation-duration: 3s;
+    animation-name: fadeIn;
+}
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
 
 }
