--- a/css/style.css
+++ b/css/style.css
@@ -53,10 +53,7 @@ a {
     position: relative;
     color: blue;
 }
-/* .imglink {
-    top: -22px;
-    left:-10px;
-} */
+
 :focus {
     text-decoration: underline;
 }
@@ -90,8 +87,133 @@ ol {
  ul {
     list-style-type: square;
  }
- 
+ .hidden {
+    display: none;
+ }
 
+ @media screen and (min-width:900px) and (max-width: 2000px) {
+    .material-symbols-outlined {
+        margin-top: 5px;
+        display: block;
+
+      font-variation-settings:
+      'FILL' 0,
+      'wght' 400,
+      'GRAD' 0,
+      'opsz' 24
+    }
+#recipes img:first-of-type {
+    float:left;
+    width: 400px;
+    height: 550px;
+}
+#recipes ol {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+div img {
+    width: 400px;
+    height: 400px;  
+    background-image: url('../images/redlake.jpeg');
+    background-size: contain;
+}
+.grid-recipes {
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    overflow: wrap;
+}
+body {
+    background-image: url('../images/transparentbg.png');
+    background-repeat: no-repeat;
+    background-size: 250%;
+
+}
+#recipes .grid-recipes img:first-of-type {
+
+    height: 25%;
+    width: 22%;
+}
+.grid-recipes img, .grid-basil img {
+    height: 25%;
+    width: 22%;
+    background-image: none;
+
+}
+
+ul, ol {
+    display: inline-block;
+}
+
+p {
+    display: inline-block;
+    width: 55%;
+    text-align: center;  
+}
+.pet {
+    display: grid;
+}
+#travel div {
+    display: grid;
+    border: 1px dotted;
+}
+.grid-basil {
+    display: flex;
+}
+
+ h2 {
+   margin-top: 30px;
+   margin-right:50%;
+}
+.grid-recipes img{
+    margin-top: 100px;
+}
+.grid-recipes img{
+   
+    position: relative;
+    animation: example 20s linear infinite;
+    -webkit-animation: example 20s infinite linear;
+  }
+  img:hover {
+    border-radius: 60%;
+  }
+   h2:before {
+    content: '\f004';
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
+    margin:0px 0px 0px 10px;
+    text-decoration:none;
+  }
+ 
+  .active:before {
+    font-family: FontAwesome;
+    content: "\f015";
+    display: inline-block;
+    padding-right: 3px;
+    vertical-align: middle; 
+ }
+ 
+  @keyframes example {
+   
+      0% {
+        left: 0;
+      }
+      50% {
+        left: 100%;
+      }
+      100% {
+        left: 0;    
+      }
+  }
+  #largeImage {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover; 
+  }
+
+
+}
 @media (prefers-reduced-motion: reduce) {
     html{
         scroll-behavior: auto;
@@ -139,7 +261,7 @@ ol {
    h2 {
     text-align: center;
    }
-   a{
+    a{
     position: inherit;
     text-align: center;
     display: block;
@@ -204,7 +326,7 @@ ol {
 }
 
 }
-@media screen and (min-width: 600px) and (max-width: 1100px){
+@media screen and (min-width: 600px) and (max-width: 900px){
     nav ul li{
         display: inline-block;
         margin: auto;
@@ -226,11 +348,9 @@ ol {
         float:left;
         width: 200px;
     }
-    
    
-    .pet p {
+     p {
         margin-top:20px;
-        vertical-align: middle;
     }
   
     .pet ul {
@@ -270,5 +390,5 @@ ol {
     0% { opacity: 0; }
     100% { opacity: 1; }
   }
-
+   
 }
