--- a/css/style.css
+++ b/css/style.css
@@ -211,8 +211,16 @@ p {
     height: 100vh;
     object-fit: cover; 
   }
-
-
+nav a {
+    font-family: 'Space Mono', monospace;
+    font-size: x-large;
+}
+nav ul li {
+    margin-left: 50px;
+}
+h2 {
+    font-family: 'Kdam Thmor Pro', sans-serif;
+}
 }
 @media (prefers-reduced-motion: reduce) {
     html{
