--- a/css/style.css
+++ b/css/style.css
@@ -91,127 +91,6 @@ ol {
     display: none;
  }
 
- @media screen and (min-width:900px) and (max-width: 2000px) {
-    
-#recipes img:first-of-type {
-    float:left;
-    width: 400px;
-    height: 550px;
-}
-#recipes ol {
-    padding-left: 10%;
-    padding-right: 10%;
-}
-div img {
-    width: 400px;
-    height: 400px;  
-    background-image: url('../images/redlake.jpeg');
-    background-size: contain;
-}
-.grid-recipes {
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    overflow: wrap;
-}
-body {
-    background-image: url('../images/transparentbg.png');
-    background-repeat: no-repeat;
-    background-size: 250%;
-
-}
-#recipes .grid-recipes img:first-of-type {
-
-    height: 25%;
-    width: 22%;
-}
-.grid-recipes img, .grid-basil img {
-    height: 25%;
-    width: 22%;
-    background-image: none;
-
-}
-
-ul, ol {
-    display: inline-block;
-}
-
-p {
-    display: inline-block;
-    width: 55%;
-    text-align: center;  
-}
-.pet {
-    display: grid;
-}
-#travel div {
-    display: grid;
-    border: 1px dotted;
-}
-.grid-basil {
-    display: flex;
-}
-
- h2 {
-   margin-top: 30px;
-   margin-right:50%;
-   font-family: 'Kdam Thmor Pro', sans-serif;
-}
-.grid-recipes img{
-    margin-top: 100px;
-}
-.grid-recipes img{
-   
-    position: relative;
-    animation: example 20s linear infinite;
-    -webkit-animation: example 20s infinite linear;
-  }
-  img:hover {
-    border-radius: 60%;
-  }
-  /* heart icon */
-   h2:before {
-    content: '\f004';
-    font-family: FontAwesome;
-    font-weight: normal;
-    font-style: normal;
-    margin:0px 0px 0px 10px;
-    text-decoration:none;
-  }
-   /* home icon */
-  .active:before {
-    font-family: FontAwesome;
-    content: "\f015";
-    display: inline-block;
-    padding-right: 5px;
- }
-
-  @keyframes example {
-   
-      0% {
-        left: 0;
-      }
-      50% {
-        left: 100%;
-      }
-      100% {
-        left: 0;    
-      }
-  }
-  #largeImage {
-    width: 100%;
-    height: 100vh;
-    object-fit: cover; 
-  }
-nav a {
-    font-family: 'Space Mono', monospace;
-    font-size: x-large;
-}
-nav ul li {
-    margin-left: 50px;
-}
-
-}
 @media (prefers-reduced-motion: reduce) {
     html{
         scroll-behavior: auto;
@@ -233,6 +112,7 @@ nav ul li {
         animation: none;
     }
 }
+/* mobile */
 @media screen and (min-width: 300px) and (max-width: 600px){
     html, body{
         overflow-x: hidden;
@@ -324,6 +204,7 @@ nav ul li {
 }
 
 }
+/* tablet */
 @media screen and (min-width: 600px) and (max-width: 900px){
     nav ul li{
         display: inline-block;
@@ -390,3 +271,126 @@ nav ul li {
   }
    
 }
+
+/* desktop */
+@media screen and (min-width:900px) and (max-width: 2000px) {
+    
+    #recipes img:first-of-type {
+        float:left;
+        width: 400px;
+        height: 550px;
+    }
+    #recipes ol {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+    div img {
+        width: 400px;
+        height: 400px;  
+        background-image: url('../images/redlake.jpeg');
+        background-size: contain;
+    }
+    .grid-recipes {
+        background-size: cover;
+        background-repeat: no-repeat;
+        display: flex;
+        overflow: wrap;
+    }
+    body {
+        background-image: url('../images/transparentbg.png');
+        background-repeat: no-repeat;
+        background-size: 250%;
+    
+    }
+    #recipes .grid-recipes img:first-of-type {
+    
+        height: 25%;
+        width: 22%;
+    }
+    .grid-recipes img, .grid-basil img {
+        height: 25%;
+        width: 22%;
+        background-image: none;
+    
+    }
+    
+    ul, ol {
+        display: inline-block;
+    }
+    
+    p {
+        display: inline-block;
+        width: 55%;
+        text-align: center;  
+    }
+    .pet {
+        display: grid;
+    }
+    #travel div {
+        display: grid;
+        border: 1px dashed;
+    }
+    .grid-basil {
+        display: flex;
+    }
+    
+     h2 {
+       margin-top: 30px;
+       margin-right:50%;
+       font-family: 'Kdam Thmor Pro', sans-serif;
+    }
+    .grid-recipes img{
+        margin-top: 100px;
+    }
+    .grid-recipes img{
+       
+        position: relative;
+        animation: example 20s linear infinite;
+        -webkit-animation: example 20s infinite linear;
+      }
+      img:hover {
+        border-radius: 60%;
+      }
+      /* heart icon */
+       h2:before {
+        content: '\f004';
+        font-family: FontAwesome;
+        font-weight: normal;
+        font-style: normal;
+        margin:0px 0px 0px 10px;
+        text-decoration:none;
+      }
+       /* home icon */
+      .active:before {
+        font-family: FontAwesome;
+        content: "\f015";
+        display: inline-block;
+        padding-right: 5px;
+     }
+    
+      @keyframes example {
+       
+          0% {
+            left: 0;
+          }
+          50% {
+            left: 100%;
+          }
+          100% {
+            left: 0;    
+          }
+      }
+      #largeImage {
+        width: 100%;
+        height: 100vh;
+        object-fit: cover; 
+      }
+    nav a {
+        font-family: 'Space Mono', monospace;
+        font-size: x-large;
+    }
+    nav ul li {
+        margin-left: 50px;
+    }
+    
+    }
